[package]
name = "cha-rs"
version = "0.1.0"
edition = "2021"
description = "Extract specific characters from an input."
repository = "https://github.com/jj-style/cha-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
