[package]
name = "cha-rs"
version = "0.0.3"
edition = "2021"
description = "Extract specific characters from an input."
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/jj-style/cha-rs"
homepage = "https://github.com/jj-style/cha-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
thiserror = "1.0.53"